@@ -1,4 +1,5 @@
 1.2.3 - TBD
+    * Fixed error preventing naming and overwriting of custom camera presets
     * Changed map status text color to red to improve visibility
 
 1.2.2 - 2014-01-13
